// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormError /> component its snapshot matches story Default 1`] = `
<div>
  <div
    class="cds--inline-notification cds--inline-notification--error cds--inline-notification--hide-close-button"
    role="status"
  >
    <div
      class="cds--inline-notification__details"
    >
      <svg
        aria-hidden="true"
        class="cds--inline-notification__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,1C4.1,1,1,4.1,1,8s3.1,7,7,7s7-3.1,7-7S11.9,1,8,1z M10.7,11.5L4.5,5.3l0.8-0.8l6.2,6.2L10.7,11.5z"
        />
        <path
          d="M10.7,11.5L4.5,5.3l0.8-0.8l6.2,6.2L10.7,11.5z"
          data-icon-path="inner-path"
          fill="none"
          opacity="0"
        />
        <title>
          error icon
        </title>
      </svg>
      <div
        class="cds--inline-notification__text-wrapper"
      >
        <div
          class="cds--inline-notification__title"
        >
          Error
        </div>
        <div
          class="cds--inline-notification__subtitle"
        >
          Some error message
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FormError /> component its snapshot matches story Warning 1`] = `
<div>
  <div
    class="cds--inline-notification cds--inline-notification--warning cds--inline-notification--hide-close-button"
    role="status"
  >
    <div
      class="cds--inline-notification__details"
    >
      <svg
        aria-hidden="true"
        class="cds--inline-notification__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
        />
        <path
          d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
          data-icon-path="inner-path"
          opacity="0"
        />
        <title>
          warning icon
        </title>
      </svg>
      <div
        class="cds--inline-notification__text-wrapper"
      >
        <div
          class="cds--inline-notification__title"
        >
          Warning
        </div>
        <div
          class="cds--inline-notification__subtitle"
        >
          Some warning message
        </div>
      </div>
    </div>
  </div>
</div>
`;
